--- a/README.rdoc
+++ b/README.rdoc
@@ -16,32 +16,27 @@ Requires Active Directory to handle user authentication
 
 First get the latest copy from github and bundle install
 
-```
-git clone http://github.com/erwinkarim/problem
-bundle install
-```
+	git clone http://github.com/erwinkarim/problem
+	bundle install
 
 create an `.env` file at the application root and modify the values to your coperate network
 
-```
-devise_ldap_host=<your Active Directory Domain Controller>
-devise_ldap_domains={"<domain name short form>" => "<fully qualified domain name; example.com>"}
-devise_ldap_base=<ldap base; DC=EXAMPLE,DC=COM>
-SECRET_KEY_BASE=< results from "rake secret" command>
-```
+	devise_ldap_host=<your Active Directory Domain Controller>
+	devise_ldap_domains={"<domain name short form>" => "<fully qualified domain name; example.com>"}
+	devise_ldap_base=<ldap base; DC=EXAMPLE,DC=COM>
+	SECRET_KEY_BASE=< results from "rake secret" command>
 
 create the database and seed the data for the workflow
-```
-rake db:create
-rake db:migrate
-rake db:seed
-```
+
+	rake db:create
+	rake db:migrate
+	rake db:seed
 
 === Deployment
 
 After following the configuration steps, just run the application with the following command
 
-`RAILS_ENV=production PORT=<port> foreman start`
+	RAILS_ENV=production PORT=<port> foreman start
 
 Just access to your server. You should be able to login and start creating issue, and track them.
 
