--- a/README.rdoc
+++ b/README.rdoc
@@ -28,6 +28,7 @@ create an `.env` file at the application root and modify the values to your cope
 	devise_ldap_domains={"<domain name short form>" => "<fully qualified domain name; example.com>"}
 	devise_ldap_base=<ldap base; DC=EXAMPLE,DC=COM>
 	SECRET_KEY_BASE=< results from "rake secret" command>
+	default_admin=<SAM-account-name of your default admin>
 ```
 
 create the database and seed the data for the workflow
